[tool.poetry]
name = "ochre"
version = "0.5.0"
description = "A tiny Python package for working with colors in a pragmatic way"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/getcuia/ochre"
repository = "https://github.com/getcuia/ochre"
keywords = [
    "ansi",
    "color-palettes",
    "colors",
    "cuia",
    "hcl",
    "hex",
    "ochre",
    "rgb",
    "web",
    "zero-dependency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
prospector = "^1.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.960"
bandit = "^1.7.4"
flake8 = "^4.0.1"
black = {version = "^22.3", allow-prereleases = true}
pylint = "^2.14.1"
hypothesis = "^6.59.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
